# quetapiton-IDE

./: README.md
Erromadeite LoveLaVa/: CMakeLists.txt  Erromadeite LoveLaVa.cpp  Erromadeite LoveLaVa.h
Erromadeite LoveLaVa/comandos/: clear.h  comanddetect.h  copyright.h  erromadeite_programs.h
erromadeite-terminal/: index.html
erromadeite-terminal/demo1/: main.cpp
erromadeite-terminal/demo1/comand_scripts/: detectcomand.hpp  execute.hpp
erromadeite-terminal/demo1/libs/: createfile.hpp  dir.hpp
erromadeite-terminal/demo2/: main.cpp
erromadeite-terminal/demo2/libs/: createfile.hpp
erromadeitelove156/: index.html  script.c
libs/c/: cbuf.h  createfile.c  qelor.h
libs/cpp/: createfile.cpp  createrandom_string.hpp  rcs.hpp
